Change _MSC_VER ifdef since MSVC++ .net 2003 has fixed one of their compiler bugs.  b=208439  Patch from Ian Hickson <ian@hixie.ch>.  r=dbaron  sr=jag